--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -28,7 +28,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 rosbuild_add_library(pr2_controller_lib src/cartesianController.cpp
 										src/explforceController.cpp
-										src/impedanceController.cpp )
+										src/impedanceController.cpp
+										src/neuroadptController.cpp)
 
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
