--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -26,10 +26,11 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #find_package(Eigen REQUIRED)
 #include_directories(${Eigen_INCLUDE_DIRS})
 
-rosbuild_add_library(pr2_controller_lib src/cartesianController.cpp
-										src/explforceController.cpp
-										src/impedanceController.cpp
-										src/neuroadptController.cpp)
+rosbuild_add_library(pr2_controller_lib src/explforceController.cpp)
+#					src/cartesianController.cpp
+#					src/explforceController.cpp
+#					src/impedanceController.cpp
+#					src/neuroadptController.cpp)
 
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
