--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -39,8 +39,7 @@ rosbuild_add_library(pr2_controller_lib src/explforceController.cpp)
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 
-rosbuild_add_executable(SystemModel_test src/test/SystemModel_test.cpp)
-
-target_link_libraries( SystemModel_test	${PROJECT_NAME} )
+#rosbuild_add_executable(SystemModel_test src/test/SystemModel_test.cpp)
+#target_link_libraries( SystemModel_test	${PROJECT_NAME} )
 
 #target_link_libraries(example ${PROJECT_NAME})
