--- a/neuroAdaptiveSim/CMakeLists.txt
+++ b/neuroAdaptiveSim/CMakeLists.txt
@@ -28,6 +28,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 
-rosbuild_add_executable( rbdlModelTest src/rbdlModelTest.cpp )
+#rosbuild_add_executable( rbdlModelTest src/rbdlModelTest.cpp )
+rosbuild_add_executable( loadPr2Rarm src/loadPr2Rarm.cpp )
 
 #target_link_libraries(example ${PROJECT_NAME})
