--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -11,10 +11,18 @@ pr2_explforceController:
 pr2_impedanceController:
   type: PR2ImpedanceControllerClass
   root_name: torso_lift_link
-  tip_name: r_gripper_tool_frame
+  tip_name: r_gripper_tool_frame 
 
 pr2_neuroadptController:
   type: PR2NeuroadptControllerClass
   root_name: torso_lift_link
   tip_name: r_gripper_tool_frame
 
+nn_kappa            : 0.07
+nn_Kv               : 10  
+nn_lambda           : 0.5 
+nn_Kz               : 0   
+nn_Zb               : 100 
+nn_feedForwardForce : 1   
+nn_nnF              : 100 
+nn_nnG              : 20 
