Added rotation and paramed

--- a/uta_pr2_cartPush/pr2_cartPush.yaml
+++ b/uta_pr2_cartPush/pr2_cartPush.yaml
@@ -2,4 +2,7 @@ pr2_cartPush:
   type: PR2CartPushClass
   root_name: torso_lift_link
   r_tip_name: r_gripper_tool_frame
-  l_tip_name: l_gripper_tool_frame 
+  l_tip_name: l_gripper_tool_frame
+
+velGain : 3
+rotGain : 3
