--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -27,3 +27,17 @@ nn_feedForwardForce : 1
 nn_nnF              : 100 
 nn_nnG              : 20
 nn_ON               : 0
+
+cartPos_Kp_x : 100.0
+cartPos_Kp_y : 100.0
+cartPos_Kp_z : 100.0
+cartPos_Kd_x : 1.0
+cartPos_Kd_y : 1.0
+cartPos_Kd_z : 1.0
+
+cartRot_Kp_x : 100.0
+cartRot_Kp_y : 100.0
+cartRot_Kp_z : 100.0
+cartRot_Kd_x : 1.0
+cartRot_Kd_y : 1.0
+cartRot_Kd_z : 1.0
