--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -23,13 +23,19 @@ pr2_neuroadptController:
   root_name: torso_lift_link
   tip_name: r_gripper_tool_frame
 
+nnNum_Inputs        : 35 
+nnNum_Outputs       : 7  
+nnNum_Hidden        : 100
+nnNum_Error         : 7  
+nnNum_Joints        : 7  
+
 nn_kappa            : 0.07
 nn_Kv               : 1
-nn_lambda           : 5 
+nn_lambda           : 0.5 
 nn_Kz               : 1   
-nn_Zb               : 10000 
+nn_Zb               : 100 
 nn_feedForwardForce : 1   
-nn_nnF              : 50 
+nn_nnF              : 100 
 nn_nnG              : 20
 nn_ON               : 1
 
