--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -24,7 +24,7 @@ pr2_neuroadptController:
   tip_name: r_gripper_tool_frame
 
 circleRate          : 3
-circleLlim          : 0
+circleLlim          : 0.5
 circleUlim          : 1.5
 
 nnNum_Inputs        : 35 
@@ -33,15 +33,19 @@ nnNum_Hidden        : 10
 nnNum_Error         : 7  
 nnNum_Joints        : 7  
 
-nn_kappa            : 0.07
+# Filtered error
+# r = (qd_m - qd) + lambda*(q_m - q);
+# Kv*r
+
 nn_Kv               : 3
-nn_lambda           : 9 
-nn_Kz               : 0   
-nn_Zb               : 100 
+nn_lambda           : 50
+nn_kappa            : 0.07
+nn_Kz               : 0.001   
+nn_Zb               : 1000 
 nn_feedForwardForce : 0   
 nn_nnF              : 100 
 nn_nnG              : 20
-nn_ON               : 1
+nn_ON               : 0
 
 m_M                 : 1
 m_S                 : 5
