--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -32,23 +32,23 @@ rosbuild_add_library( cslLIB src/neural_network.cpp )
 rosbuild_add_library( oelLIB src/least_squares.cpp src/kalman_estimate.cpp )
 rosbuild_add_library( rbdlUtilLIB src/rbdl_urdfreader.cc )
 
-rosbuild_add_library(pr2_controller_lib src/neuroadptController.cpp
-										src/cartesianController.cpp 
-                                        src/cartneuroController.cpp
-                                        src/cartresnnController.cpp )
-								       #src/explforceController.cpp
-								       #src/impedanceController.cpp
-								       #src/explforceController.cpp
+rosbuild_add_library( pr2_controller_lib src/cartesianController.cpp
+                                         src/explforceController.cpp
+                                         src/impedanceController.cpp
+                                         src/explforceController.cpp
+										 src/neuroadptController.cpp
+                                         src/cartneuroController.cpp
+                                         src/cartresnnController.cpp )
  
-target_link_libraries(pr2_controller_lib cslLIB )
-target_link_libraries(pr2_controller_lib oelLIB )
+target_link_libraries( pr2_controller_lib cslLIB )
+target_link_libraries( pr2_controller_lib oelLIB )
 
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 
-rosbuild_add_executable(rbdlTest src/test/rbdlTest.cpp)
-target_link_libraries(rbdlTest rbdlUtilLIB )
+rosbuild_add_executable( rbdlTest src/test/rbdlTest.cpp)
+target_link_libraries(   rbdlTest rbdlUtilLIB )
 
 #rosbuild_add_executable(odeTest src/odeTest.cpp)
 #rosbuild_add_executable(SystemModel_test src/test/SystemModel_test.cpp)
