--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -72,13 +72,15 @@ cartRot_Kd_z : 1.2
 
 useCurrentCartPose : false
 
+useNullspacePose   : true
+
 cartIniX     :  0.8
 cartIniY     : -0.2
 cartIniZ     :  0.1
 
-cartDesX     : 0.1
+cartDesX     : 0.0
 cartDesY     : 0.1
-cartDesZ     : 0.0
+cartDesZ     : 0.1
 cartDesRoll  : 0.0
 cartDesPitch : 0.0
 cartDesYaw   : 0.0
