--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -35,9 +35,10 @@ rosbuild_add_library( pr2_controller_lib src/cartesianController.cpp
                                          src/explforceController.cpp
                                          src/impedanceController.cpp
                                          src/explforceController.cpp
-                                         # src/neuroadptController.cpp
-                                         # src/cartneuroController.cpp
-                                         src/cartresnnController.cpp )
+                                         #src/neuroadptController.cpp
+                                         src/cartneuroController.cpp
+                                         #src/cartresnnController.cpp
+                                         )
  
 target_link_libraries( pr2_controller_lib cslLIB )
 target_link_libraries( pr2_controller_lib oelLIB )
