Model and desired model working perfectly with ARMA model

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -72,14 +72,14 @@ cartRot_Kd_z : 3
 
 useCurrentCartPose : false
 
-useNullspacePose   : true
+useNullspacePose   : false
 
 cartIniX     :  0.7
 cartIniY     :  0.0
 cartIniZ     :  0.1
 
 cartDesX     :  0.7
-cartDesY     : -0.5
+cartDesY     :  0.3
 cartDesZ     :  0.1
 cartDesRoll  :  0.0
 cartDesPitch :  0.0
