--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -58,6 +58,8 @@ target_link_libraries( pr2_controller_lib oelLIB )
 rosbuild_add_executable(controllerExperimenter src/controllerExperimenter.cpp)
 target_link_libraries(controllerExperimenter yaml-cpp )
 
+rosbuild_add_executable(refTrajectoryClient src/refTrajectoryClient.cpp)
+
 rosbuild_add_executable(SystemModel_test src/test/SystemModel_test.cpp)
 target_link_libraries( SystemModel_test	oelLIB )
 
