--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -77,6 +77,9 @@ useNullspacePose   : true
 cartIniX     :  0.7
 cartIniY     :  -0.2
 cartIniZ     :  0.1
+cartIniRoll  :  0.0
+cartIniPitch :  0.0
+cartIniYaw   :  0.0
 
 cartDesX     :  0.7
 cartDesY     : -0.5
