Selectable FT input

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -74,6 +74,8 @@ useCurrentCartPose : false
 
 useNullspacePose   : true
 
+useFTinput         : false
+
 cartIniX     :  0.7
 cartIniY     :  -0.2
 cartIniZ     :  0.1
