Added ARMA vs MSD selector

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -76,6 +76,8 @@ useNullspacePose   : true
 
 useFTinput         : false
 
+useARMAmodel       : true
+
 cartIniX     :  0.7
 cartIniY     :  -0.2
 cartIniZ     :  0.1
