--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -56,6 +56,9 @@ m_M                 : 1
 m_S                 : 5
 m_D                 : 1
 
+task_mA             : 1
+task_mB             : 1
+
 cartPos_Kp_x : 80.0
 cartPos_Kp_y : 80.0
 cartPos_Kp_z : 80.0
