Changed to clang and made default to use ft

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -77,7 +77,7 @@ useCurrentCartPose : false
 
 useNullspacePose   : true
 
-useFTinput         : false
+useFTinput         : true
 
 useARMAmodel       : true
 
