--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -80,8 +80,8 @@ forceTorqueOn      : false
 
 # Only one can be true
 useARMAmodel       : false
-useFIRmodel        : false
-useMRACmodel       : true
+useFIRmodel        : true
+useMRACmodel       : false
 useMSDmodel        : false
 
 # This makes zero any force less than below
