--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -1,3 +1,90 @@
+
+useCurrentCartPose : false
+useNullspacePose   : true
+useFTinput         : true
+forceTorqueOn      : true
+
+# Only one can be true
+useARMAmodel       : true
+useFIRmodel        : false
+useMRACmodel       : false
+useMSDmodel        : false
+
+fixedFilterWeights : false
+
+filtW0             : 0.0
+filtW1             : 0.0
+filtW2             : 0.0
+filtW3             : 0.0
+filtW4             : 0.0
+filtW5             : 0.0
+filtW6             : 0.0
+filtW7             : 0.0
+
+# This makes zero any force less than below
+forceCutOffX       : 1.0
+forceCutOffY       : 1.0
+forceCutOffZ       : 1.0
+
+m_M                 : 1
+m_S                 : 5
+m_D                 : 1
+
+task_mA             : 1.5
+task_mB             : 1.5
+
+cartIniX     :  0.7
+cartIniY     :  0.0
+cartIniZ     :  0.1
+cartIniRoll  :  0.0
+cartIniPitch :  0.0
+cartIniYaw   :  0.0
+
+cartDesX     :  0.7
+cartDesY     : -0.3
+cartDesZ     :  0.1
+cartDesRoll  :  0.0
+cartDesPitch :  0.0
+cartDesYaw   :  0.0
+
+circleRate          : 3
+circleLlim          : 0.5
+circleUlim          : 1.5
+
+nnNum_Inputs        : 35 
+nnNum_Outputs       : 7
+nnNum_Hidden        : 10
+nnNum_Error         : 7  
+nnNum_Joints        : 7  
+
+# Filtered error
+# r = (qd_m - qd) + lambda*(q_m - q);
+# Kv*r
+
+nn_Kv               : 5
+nn_lambda           : 20
+nn_kappa            : 0.3
+nn_Kz               : 0.001 
+nn_Zb               : 100 
+nn_feedForwardForce : 1   
+nn_nnF              : 100 
+nn_nnG              : 200
+nn_ON               : 1
+
+cartPos_Kp_x : 60.0
+cartPos_Kp_y : 60.0
+cartPos_Kp_z : 60.0
+cartPos_Kd_x : 10
+cartPos_Kd_y : 10
+cartPos_Kd_z : 10
+
+cartRot_Kp_x : 9.0
+cartRot_Kp_y : 9.0
+cartRot_Kp_z : 9.0
+cartRot_Kd_x : 3
+cartRot_Kd_y : 3
+cartRot_Kd_z : 3
+
 pr2_cartesianController:
   type: PR2CartesianControllerClass
   root_name: torso_lift_link
@@ -27,79 +114,3 @@ pr2_neuroadptController:
   type: PR2NeuroadptControllerClass
   root_name: torso_lift_link
   tip_name: r_gripper_tool_frame
-
-circleRate          : 3
-circleLlim          : 0.5
-circleUlim          : 1.5
-
-nnNum_Inputs        : 35 
-nnNum_Outputs       : 7
-nnNum_Hidden        : 10
-nnNum_Error         : 7  
-nnNum_Joints        : 7  
-
-# Filtered error
-# r = (qd_m - qd) + lambda*(q_m - q);
-# Kv*r
-
-nn_Kv               : 5
-nn_lambda           : 20
-nn_kappa            : 0.3
-nn_Kz               : 0.001 
-nn_Zb               : 100 
-nn_feedForwardForce : 1   
-nn_nnF              : 100 
-nn_nnG              : 200
-nn_ON               : 1
-
-m_M                 : 1
-m_S                 : 5
-m_D                 : 1
-
-task_mA             : 1
-task_mB             : 1
-
-cartPos_Kp_x : 60.0
-cartPos_Kp_y : 60.0
-cartPos_Kp_z : 60.0
-cartPos_Kd_x : 10
-cartPos_Kd_y : 10
-cartPos_Kd_z : 10
-
-cartRot_Kp_x : 9.0
-cartRot_Kp_y : 9.0
-cartRot_Kp_z : 9.0
-cartRot_Kd_x : 3
-cartRot_Kd_y : 3
-cartRot_Kd_z : 3
-
-useCurrentCartPose : false
-useNullspacePose   : true
-useFTinput         : true
-forceTorqueOn      : false
-
-# Only one can be true
-useARMAmodel       : false
-useFIRmodel        : true
-useMRACmodel       : false
-useMSDmodel        : false
-
-# This makes zero any force less than below
-forceCutOffX       : 1.0
-forceCutOffY       : 1.0
-forceCutOffZ       : 1.0
-
-cartIniX     :  0.7
-cartIniY     :  0.0
-cartIniZ     :  0.1
-cartIniRoll  :  0.0
-cartIniPitch :  0.0
-cartIniYaw   :  0.0
-
-cartDesX     :  0.7
-cartDesY     : -0.5
-cartDesZ     :  0.1
-cartDesRoll  :  0.0
-cartDesPitch :  0.0
-cartDesYaw   :  0.0
-
