--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -62,6 +62,8 @@ target_link_libraries(controllerExperimenter yaml-cpp )
 
 rosbuild_add_executable(refTrajectoryClient src/refTrajectoryClient.cpp)
 
+rosbuild_add_executable(controllerTestClient src/controllerTestClient.cpp)
+
 #rosbuild_add_executable(SystemModel_test src/test/SystemModel_test.cpp)
 #target_link_libraries( SystemModel_test	oelLIB )
 
