Added param to init pose

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -47,6 +47,13 @@ cartDesRoll  :  0.0
 cartDesPitch :  0.0
 cartDesYaw   :  0.0
 
+leftcartIniX     :  0.7
+leftcartIniY     :  0.3
+leftcartIniZ     :  0.1
+leftcartIniRoll  :  0.0
+leftcartIniPitch :  0.0
+leftcartIniYaw   : -1.57079633
+
 circleRate          : 3
 circleLlim          : 0.5
 circleUlim          : 1.5
@@ -114,3 +121,18 @@ pr2_neuroadptController:
   type: PR2NeuroadptControllerClass
   root_name: torso_lift_link
   tip_name: r_gripper_tool_frame
+
+l_arm_cartesian_pose_controller:
+  type: CartesianPoseController
+  root_name: torso_lift_link
+  tip_name: l_wrist_roll_link
+  fb_trans:
+    p: 20.0
+    i: 0.5
+    d: 0.0
+    i_clamp: 1.0
+  fb_rot:
+    p: 0.5
+    i: 0.1
+    d: 0.0
+    i_clamp: 0.2
