Commented out protobuf code

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -2,7 +2,7 @@
 useCurrentCartPose : false
 useNullspacePose   : true
 useFTinput         : true
-forceTorqueOn      : true
+forceTorqueOn      : false
 
 # Only one can be true
 useARMAmodel       : true
