--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -64,7 +64,9 @@ rosbuild_add_library( pr2_controller_lib src/cartesianController.cpp
  
 target_link_libraries( pr2_controller_lib cslLIB )
 target_link_libraries( pr2_controller_lib oelLIB )
-target_link_libraries(pr2_controller_lib controllerFullDataLIB ${PROTOBUF_LIBRARIES})
+
+# protobuf link
+#target_link_libraries(pr2_controller_lib controllerFullDataLIB ${PROTOBUF_LIBRARIES})
 
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
