Parameterized rls inputs lambda and sigma

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -10,6 +10,9 @@ useFIRmodel        : false
 useMRACmodel       : false
 useMSDmodel        : false
 
+rls_lambda         : 0.98
+rls_sigma          : 1000
+
 fixedFilterWeights : false
 
 filtW0             : -1.8136 #-2.3646
