--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -5,13 +5,13 @@ useFTinput         : true
 forceTorqueOn      : true
 
 # Only one can be true
-useARMAmodel       : true
+useARMAmodel       : false
 useFIRmodel        : false
-useMRACmodel       : false
+useMRACmodel       : true
 useMSDmodel        : false
 
 rls_lambda         : 0.98
-rls_sigma          : 1000
+rls_sigma          : 0.001
 
 fixedFilterWeights : false
 
@@ -29,9 +29,9 @@ forceCutOffX       : 1.0
 forceCutOffY       : 1.0
 forceCutOffZ       : 1.0
 
-m_M                 : 1
-m_S                 : 5
-m_D                 : 1
+m_M                 : 50
+m_S                 : 0
+m_D                 : 30
 
 task_mA             : 1.5
 task_mB             : 1.5
