--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -11,7 +11,7 @@ useMRACmodel       : false
 useMSDmodel        : false
 
 # Is the reference trajectory x_r or q_r set externally or estimated
-externalRefTraj    : true
+externalRefTraj    : false
 
 rls_lambda         : 0.98
 rls_sigma          : 0.001
