pr2_controller.yaml edited online with Bitbucket

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -53,7 +53,7 @@ m_M                 : 20.0
 m_S                 : 0
 m_D                 : 50.0
 
-# Params for something... FIXME!!
+# Params for M(s) of the RLS models
 task_mA             : 1.5
 task_mB             : 1.5
 
