--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -5,9 +5,9 @@ useFTinput         : true
 forceTorqueOn      : true
 
 # Only one can be true
-useARMAmodel       : true
+useARMAmodel       : false
 useFIRmodel        : false
-useMRACmodel       : false
+useMRACmodel       : true
 useMSDmodel        : false
 useDirectmodel     : false
 
@@ -31,7 +31,7 @@ mrac_gamma_3       : 2.5
 mrac_gamma_4       : 5
 mrac_gamma_5       : 5
 
-fixedFilterWeights : true
+fixedFilterWeights : false
 
 # ARMA parameters
 filtW0             : -1.8775  #-1.8136 #-2.3646
@@ -44,9 +44,9 @@ filtW6             : -0.0013  #-0.0007 #-0.0018
 filtW7             :  0.0002  #-0.0009 # 0.0014
 
 # This makes zero any force less than below
-forceCutOffX       : 1.0
-forceCutOffY       : 1.0
-forceCutOffZ       : 1.0
+forceCutOffX       : 0.0
+forceCutOffY       : 0.0
+forceCutOffZ       : 0.0
 
 # Params for the MSD outer-loop controller
 m_M                 : 20.0
