--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -99,3 +99,5 @@ rosbuild_add_executable(intentEstimator_test src/intentEstimator_test.cpp)
 #target_link_libraries( interaction_force_estimator	oelLIB )
 
 #target_link_libraries(example ${PROJECT_NAME})
+
+rosbuild_add_executable(irlTest_test test/irlTest.cpp)
