--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -7,7 +7,8 @@ forceTorqueOn      : true
 # Only one can be true
 useARMAmodel       : false
 useFIRmodel        : false
-useMRACmodel       : true
+useMRACmodel       : false
+useIRLmodel        : true
 useMSDmodel        : false
 useDirectmodel     : false
 
