Paramed oneshot and least squares iterations

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -27,8 +27,9 @@ rls_sigma          : 0.001
 
 # IRL
 numIrlSamples      : 100
+numIrlLsIter       : 20
 numCartDof         : 1
-
+irlOneshot         : true
 
 # Params for the MRAC outer-loop controller
 mrac_gamma_1       : 0.1
