--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -6,11 +6,11 @@ forceTorqueOn      : true
 
 # Only one can be true
 useARMAmodel       : false
-useCTARMAmodel     : true
+useCTARMAmodel     : false
 useFIRmodel        : false
 useMRACmodel       : false
 useIRLmodel        : false
-useMSDmodel        : false
+useMSDmodel        : true
 useDirectmodel     : false
 
 # Is the reference trajectory x_r or q_r set externally or estimated
