--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -68,6 +68,8 @@ rosbuild_add_library( pr2_controller_lib src/cartesianController.cpp
 #target_link_libraries( pr2_controller_lib cslLIB )
 target_link_libraries( pr2_controller_lib oelLIB )
 
+target_link_libraries( pr2_controller_lib pr2_gripper_sensor_controller_lib )
+
 # protobuf link
 #target_link_libraries(pr2_controller_lib controllerFullDataLIB ${PROTOBUF_LIBRARIES})
 
