--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -60,7 +60,7 @@ rosbuild_add_library( pr2_controller_lib src/cartesianController.cpp
                                          src/explforceController.cpp
                                          src/impedanceController.cpp
                                          src/explforceController.cpp
-                                         #src/neuroadptController.cpp
+                                         src/neuroadptController.cpp
                                          src/cartneuroController.cpp
                                          #src/cartresnnController.cpp
                                          )
