--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -11,14 +11,14 @@ useFIRmodel        : false
 useMRACmodel       : false
 useIRLmodel        : false
 useMSDmodel        : false
-useDirectmodel     : true
+useDirectmodel     : false
 
 outerLoop_time     : 0.05
 
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
 # i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : true
+externalRefTraj    : false
 
 # Human intent estimation
 intentEst_time     : 0.05
@@ -55,9 +55,9 @@ filtW6             : -0.0013  #-0.0007 #-0.0018
 filtW7             :  0.0002  #-0.0009 # 0.0014
 
 # This makes zero any force less than below
-forceCutOffX       : 0.1
-forceCutOffY       : 0.1
-forceCutOffZ       : 0.1
+forceCutOffX       : 1.0
+forceCutOffY       : 1.0
+forceCutOffZ       : 1.0
 
 # Params for the MSD outer-loop controller
 m_M                 : 200.0
