--- a/uta_pr2_forceControl/CMakeLists.txt
+++ b/uta_pr2_forceControl/CMakeLists.txt
@@ -63,9 +63,9 @@ rosbuild_add_library( pr2_controller_lib src/cartesianController.cpp
                                          # FIXME only one neuroadptController or
                                          #  cartresnnController compiles
                                          #src/neuroadptController.cpp
-                                         #src/cartneuroController.cpp
+                                         src/cartneuroController.cpp
                                          #src/cartresnnController.cpp
-                                         src/pidController.cpp
+                                         #src/pidController.cpp
                                          #src/computedTorqueController.cpp
                                          )
  
