--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -8,9 +8,9 @@ forceTorqueOn      : true
 useARMAmodel       : false
 useCTARMAmodel     : false
 useFIRmodel        : false
-useMRACmodel       : true
+useMRACmodel       : false
 useIRLmodel        : false
-useMSDmodel        : false
+useMSDmodel        : true
 useDirectmodel     : false
 
 outerLoop_time     : 0.05
@@ -111,7 +111,7 @@ nn_Zb               : 100
 nn_feedForwardForce : 1   
 nn_nnF              : 100 
 nn_nnG              : 200
-nn_ON               : 0
+nn_ON               : 1
 
 cartPos_Kp_x : 60.0
 cartPos_Kp_y : 60.0
