Added flexiforce to controller

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -1,3 +1,6 @@
+# Flexiforce settings
+port               : /dev/ttyACM0
+baud               : 2000000
 
 useCurrentCartPose : false
 useNullspacePose   : true
