Added flexiforce to cartneuro controller

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -6,6 +6,7 @@ useCurrentCartPose : false
 useNullspacePose   : true
 useFTinput         : true
 forceTorqueOn      : true
+useFlexiForce      : true
 
 # Only one can be true
 useARMAmodel       : false
